--- a/landing/CSS/current_style.css
+++ b/landing/CSS/current_style.css
@@ -446,7 +446,8 @@ footer .footerwrap .copyright p a:hover {
 @media only screen and (max-width: 568px) {
     footer .footerwrap {
         flex-direction: column;
-        padding: 10px 0;
+        justify-content: space-around;
+        align-items: center;
     }
 }
 
