--- a/landing/CSS/login_style.css
+++ b/landing/CSS/login_style.css
@@ -842,13 +842,18 @@ footer .footerwrap .copyright p a:hover {
 @media only screen and (max-width: 568px) {
     footer .footerwrap {
         flex-direction: column;
-        padding: 10px 0;
+        justify-content: space-around;
+        align-items: center;
     }
 }
 
 @media only screen and (max-width: 480px) {
     .form {
         padding: 20px 10px;
+    }
+
+    .formcontent.login .formbutton {
+        margin-top: 20px;
     }
 }
 
