--- a/landing/assets/styles/about_style.css
+++ b/landing/assets/styles/about_style.css
@@ -94,7 +94,7 @@ main {
 section.ourtimeline {
 	width: 100%;
 	padding: 20px;
-	background-image: url(../IMG/absurdity.png);
+	background-image: url(../img/absurdity.png);
 }
 
 .timeline {
