--- a/landing/assets/styles/1-modules/_animated-label.sass
+++ b/landing/assets/styles/1-modules/_animated-label.sass
@@ -8,3 +8,9 @@
     color: #777
     pointer-events: none
     transition: all 150ms ease-out
+
+input:focus ~ label.animated
+    color: #00c1a3
+    font-size: 0.8em
+    top: -15px
+    left: 0px
