Validation, Dropdown, Vue

--- a/getmestuff/resources/assets/sass/0-plugins/_basic.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_basic.sass
@@ -103,7 +103,7 @@ p
     position: absolute
     top: 50%
     right: 10px
-    margin-top: -16px
+    margin-top: -18px
 
 // Margins and Padding
 .m-auto
@@ -119,6 +119,9 @@ p
 
 .mr-5
     margin-right: 5%
+
+.input-wrapper
+    margin-bottom: 10px
 
 // Default Backgrounds
 .bg-white
@@ -137,3 +140,6 @@ p
 
 .overflow-visible
     overflow: visible
+
+.p-none
+    pointer-events: none
