--- a/getmestuff/resources/assets/sass/1-modules/_badge.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_badge.sass
@@ -17,6 +17,10 @@
         margin-left: -28px
         top: 0px
 
+    img
+        width: 56px
+        height: 56px
+
     p
         margin-top: 5px
         font-size: 0.9rem
