--- a/getmestuff/resources/assets/sass/2-pages/_login.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_login.sass
@@ -5,6 +5,11 @@
         position: relative
         box-shadow: 0px 500px 0px 500px $white
 
+    .parsley-errors-list.filled
+        position: absolute
+        bottom: 15px
+        font-size: 0.8rem
+
     main
         padding: 70px 0px 0px
 
