--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -4,6 +4,11 @@
         position: relative
         box-shadow: 0px 500px 0px 500px $white
 
+    .parsley-errors-list.filled
+        position: absolute
+        bottom: 5px
+        font-size: 0.8rem
+
     .main-content
         width: 55%
         box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3)
@@ -34,6 +39,9 @@
     .select
         border-bottom: 1px solid $soft-grey
         margin-bottom: 20px
+
+    .w95
+        width: 95%
 
     .currency
         color: $yellow
