--- a/getmestuff/resources/assets/sass/3-layouts/_media.sass
+++ b/getmestuff/resources/assets/sass/3-layouts/_media.sass
@@ -253,7 +253,7 @@
             span
                 display: none
 
-        .main-content section:nth-child(3) > div
+        .main-content section.achievements > div
             flex-direction: column
             justify-content: center
             align-items: center
