--- a/getmestuff/resources/assets/sass/2-pages/_login.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_login.sass
@@ -45,6 +45,9 @@
         &:focus
             border-color: #A0B3B0
 
+    input.parsley-error
+        border-color: $orangered
+
     .terms
         span, a
             font-family: $lato
