--- a/getmestuff/resources/assets/sass/1-modules/_dropdown.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_dropdown.sass
@@ -14,6 +14,7 @@
         border: 1px solid $c-primary
         height: auto
         box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3)
+        z-index: 100
 
         a
             padding: 10px
