--- a/getmestuff/resources/assets/sass/4-vendor/_vendor_dir.sass
+++ b/getmestuff/resources/assets/sass/4-vendor/_vendor_dir.sass
@@ -1,3 +1,3 @@
 @import 'font-awesome/scss/font-awesome'
 @import 'pagepiling/jquery.pagepiling'
-// @import 'owl-carousel/owl-carousel'
+@import 'owl-carousel/owl-dir'
