Start of Backend
Registration
Email Verification
Signing In
Password Reset
Middlewear
User Info on home page

--- a/getmestuff/resources/assets/sass/0-plugins/_basic.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_basic.sass
@@ -46,6 +46,9 @@ p
     align-items: flex-start
     justify-content: flex-start
 
+.start-center
+    align-items: center
+
 .wrap
     flex-wrap: wrap
 
