--- a/getmestuff/resources/assets/sass/2-pages/_login.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_login.sass
@@ -7,8 +7,13 @@
 
     .parsley-errors-list.filled
         position: absolute
-        bottom: 15px
         font-size: 0.8rem
+
+    .parsley-errors-list.filled:not(:last-child)
+        bottom: 15px
+
+    .parsley-errors-list.filled:last-child
+        bottom: 0
 
     main
         padding: 70px 0px 0px
@@ -45,6 +50,12 @@
         &:focus
             border-color: #A0B3B0
 
+    .checkbox
+        margin-bottom: 15px
+
+    .checkbox-login
+        margin-bottom: 5px
+
     input.parsley-error
         border-color: $orangered
 
@@ -66,7 +77,7 @@
         bottom: 70px
         perspective: 500px
 
-        &:hover
+        .hover:hover
             color: $success 
             
         p
@@ -77,9 +88,10 @@
         padding: 10px 20px 15px 20px
         box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3)
         width: 232px
-        top: 78%
+        top: calc(100% + 10px)
         border: 1px solid #7a7a7a
-        right: -60px
+        left: 50%
+        transform: translateX(-50%)
         cursor: initial
         transform-origin: center 0px
         z-index: 200
@@ -93,6 +105,8 @@
             border-left: 1px solid #7a7a7a
             z-index: 1
             bottom: 100%
+            left: 50%
+            margin-left: -10px
             margin-bottom: -9px
 
         .pas-wrapper
