--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -1,5 +1,8 @@
 .userpage
 
+    nav
+        max-width: 300px
+
     footer
         position: relative
         box-shadow: 0px 500px 0px 500px $white
