--- a/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
+++ b/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
@@ -144,7 +144,7 @@
 // .#{$fa-css-prefix}-thumbs-o-down:before { content: $fa-var-thumbs-o-down; }
 // .#{$fa-css-prefix}-star-half:before { content: $fa-var-star-half; }
 // .#{$fa-css-prefix}-heart-o:before { content: $fa-var-heart-o; }
-// .#{$fa-css-prefix}-sign-out:before { content: $fa-var-sign-out; }
+ .#{$fa-css-prefix}-sign-out:before { content: $fa-var-sign-out; }
 // .#{$fa-css-prefix}-linkedin-square:before { content: $fa-var-linkedin-square; }
 // .#{$fa-css-prefix}-thumb-tack:before { content: $fa-var-thumb-tack; }
 // .#{$fa-css-prefix}-external-link:before { content: $fa-var-external-link; }
