--- a/getmestuff/resources/assets/sass/1-modules/_alert.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_alert.sass
@@ -15,3 +15,8 @@
     background-color: darken(#dff0d8, 5%)
     border-color: #3c763d
     color: #3c763d
+
+.alert.error
+    background-color: darken(#f2dede, 5%)
+    border-color: #a94442
+    color: #a94442
