--- a/getmestuff/resources/assets/sass/1-modules/_alert.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_alert.sass
@@ -4,12 +4,23 @@
     right: 20px
     padding: 0.75rem 1.25rem
     display: flex
-    justify-content: center
-    align-items: center
+    align-items: flex-start
+    flex-direction: column
     z-index: 1000
     font-family: $merw
     border: 1px solid transparent
     font-size: 0.9rem
+
+    h4
+        margin-bottom: 5px
+
+    ul
+        display: block
+        margin-left: 20px
+
+        li
+            list-style: disc
+            margin-bottom: 2px
 
 .alert.success
     background-color: darken(#dff0d8, 5%)
