--- a/getmestuff/resources/assets/sass/1-modules/_wish.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_wish.sass
@@ -50,6 +50,7 @@
                 height: 100%
                 width: 30%
                 background-color: $progress
+                transition: all 300ms linear
 
     .footer
         display: flex
