--- a/getmestuff/resources/assets/sass/2-pages/_current-wishes.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_current-wishes.sass
@@ -7,6 +7,12 @@
         position: relative
         box-shadow: 0px 500px 0px 500px $white
 
+    .container
+        flex: 1 0 330px
+
+        &:empty
+            height: 0
+
     .wish
         width: 330px
         border: 3px solid $c-primary
