--- a/getmestuff/resources/assets/sass/1-modules/_wish.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_wish.sass
@@ -16,6 +16,9 @@
         justify-content: center
         align-items: flex-start
 
+    .no-results
+        padding: 60px 0
+
     .header
         width: 100%
         display: flex
