--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -66,6 +66,15 @@
         p
             font-size: 0.9rem
 
+    .wish-user
+        box-shadow: none
+
+    .user-wishes > div.mw.item
+        display: none
+
+    .owl-stage-outer
+        box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3)
+
     .star-info
         p:first-child
             font-size: 0.8rem
