--- a/getmestuff/resources/assets/sass/3-layouts/_media.sass
+++ b/getmestuff/resources/assets/sass/3-layouts/_media.sass
@@ -82,10 +82,10 @@
 
     // Userpage
     .userpage
-        main > div
-            flex-direction: column
-            justify-content: center
-            align-items: center
+        //main > div
+        //    flex-direction: column
+        //    justify-content: center
+        //    align-items: center
 
         .main-content
             width: 100%
