Control User Wishes/Ajax Buttons/Ref System
Prevent User from posting more wishes then allowed
Disable and animate button on ajax request
Ref system, only show those who have confirmed their email and donated

--- a/getmestuff/resources/assets/sass/1-modules/_button.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_button.sass
@@ -8,5 +8,15 @@ button,
     padding: 5px 20px
     font-size: 1.15rem
 
+    i
+        color: $black
+
     &:hover
         background-color: $c-hover
+
+    &:disabled
+        opacity: 0.3
+        cursor: initial
+
+        &:hover
+            background-color: $c-primary
