--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -66,12 +66,6 @@
         p
             font-size: 0.9rem
 
-    .wish-user
-        box-shadow: none
-
-    .user-wishes > div.mw.item
-        display: none
-
     .owl-stage-outer
         box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3)
 
@@ -88,5 +82,28 @@
             font-size: 0.75rem
             color: darken($soft-grey, 20%)
 
+    .wish-user
+        box-shadow: none
+
+    .user-wishes > div.mw.item
+        display: none
+
     .wishes
         height: 531px
+
+    .ref p
+        font-size: 1rem
+
+    .ref-link
+        a
+            font-size: 1rem
+            color: transparentize($black, 0.3)
+            background-color: #ffff99
+            padding: 5px 10px
+            border-radius: 5px
+
+            &:hover
+                text-decoration: underline
+
+    .ref-count
+        padding: 5px 20px
