--- a/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
+++ b/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
@@ -35,7 +35,7 @@
 // .#{$fa-css-prefix}-play-circle-o:before { content: $fa-var-play-circle-o; }
 // .#{$fa-css-prefix}-rotate-right:before,
 // .#{$fa-css-prefix}-repeat:before { content: $fa-var-repeat; }
-// .#{$fa-css-prefix}-refresh:before { content: $fa-var-refresh; }
+.#{$fa-css-prefix}-refresh:before { content: $fa-var-refresh; }
 // .#{$fa-css-prefix}-list-alt:before { content: $fa-var-list-alt; }
 // .#{$fa-css-prefix}-lock:before { content: $fa-var-lock; }
 // .#{$fa-css-prefix}-flag:before { content: $fa-var-flag; }
@@ -177,7 +177,7 @@
 // .#{$fa-css-prefix}-arrow-circle-right:before { content: $fa-var-arrow-circle-right; }
 // .#{$fa-css-prefix}-arrow-circle-up:before { content: $fa-var-arrow-circle-up; }
 // .#{$fa-css-prefix}-arrow-circle-down:before { content: $fa-var-arrow-circle-down; }
-// .#{$fa-css-prefix}-globe:before { content: $fa-var-globe; }
+ .#{$fa-css-prefix}-globe:before { content: $fa-var-globe; }
 // .#{$fa-css-prefix}-wrench:before { content: $fa-var-wrench; }
 // .#{$fa-css-prefix}-tasks:before { content: $fa-var-tasks; }
 // .#{$fa-css-prefix}-filter:before { content: $fa-var-filter; }
