--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -40,8 +40,13 @@
             margin-left: 5px
 
     .select
-        border-bottom: 1px solid $soft-grey
         margin-bottom: 20px
+        border-bottom: 1px solid $soft-grey
+
+    .topup-button
+        border-top: 1px solid $soft-grey
+        margin-top: 10px
+        padding-top: 10px
 
     .w95
         width: 95%
