--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -87,6 +87,25 @@
             font-size: 0.75rem
             color: darken($soft-grey, 20%)
 
+    .badges
+        height: 350px
+        overflow: scroll
+
+    .wish-title
+        margin-bottom: 20px
+
+        span
+            background-color: $c-primary
+            font-size: 1rem
+            font-family: $open-s
+            color: $white
+            padding: 0 5px
+            margin-left: 10px
+            border-radius: 5px
+
+        h2
+            margin-bottom: 0px
+
     .wish-user
         box-shadow: none
 
