--- a/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
+++ b/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
@@ -92,7 +92,7 @@
 // .#{$fa-css-prefix}-plus-circle:before { content: $fa-var-plus-circle; }
 // .#{$fa-css-prefix}-minus-circle:before { content: $fa-var-minus-circle; }
 // .#{$fa-css-prefix}-times-circle:before { content: $fa-var-times-circle; }
-// .#{$fa-css-prefix}-check-circle:before { content: $fa-var-check-circle; }
+.#{$fa-css-prefix}-check-circle:before { content: $fa-var-check-circle; }
 // .#{$fa-css-prefix}-question-circle:before { content: $fa-var-question-circle; }
 // .#{$fa-css-prefix}-info-circle:before { content: $fa-var-info-circle; }
 // .#{$fa-css-prefix}-crosshairs:before { content: $fa-var-crosshairs; }
