--- a/getmestuff/resources/assets/sass/1-modules/_button.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_button.sass
@@ -15,8 +15,8 @@ button,
         background-color: $c-hover
 
     &:disabled
-        opacity: 0.3
+        background-color: transparentize($c-primary, 0.7);
         cursor: initial
 
         &:hover
-            background-color: $c-primary
+            background-color: transparentize($c-primary, 0.7);
