--- a/getmestuff/resources/assets/sass/1-modules/_dropdown.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_dropdown.sass
@@ -1,6 +1,5 @@
 .dropdown
-    border: 1px solid $input-alt
-    padding: 8px
+    font-size: 0.9rem
     position: relative
     cursor: pointer
 
@@ -16,7 +15,7 @@
         box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3)
         z-index: 100
 
-        a
+        p
             padding: 10px
             background-color: $white
 
