--- a/getmestuff/resources/assets/sass/1-modules/_input.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_input.sass
@@ -13,6 +13,9 @@ textarea
     &:focus
         border-color: $success
 
+    &:disabled
+        opacity: 0.5
+
 textarea
     height: 100px
     overflow-y: scroll
