--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -91,6 +91,61 @@
         height: 350px
         overflow: scroll
 
+    .redeem-toggle
+        margin-bottom: 10px
+        cursor: pointer
+
+    .expandable
+        border-top: 1px solid $soft-grey
+        border-bottom: 1px solid $soft-grey
+        margin-bottom: 20px
+
+    .prize-option
+        padding: 10px 20px 10px 0
+        align-items: center
+
+        &:not(:last-child)
+            border-bottom: 1px solid $soft-grey
+
+        h4
+            font-size: 0.9rem
+
+        p
+            font-size: 0.9rem
+            margin-top: 5px
+
+        .radio
+            margin: 0 10px 0 0
+            width: auto
+
+    .quantity
+        padding: 10px 5px
+        justify-content: space-between
+        align-items: center
+
+        p
+            font-size: 0.9rem
+
+        input, button
+            margin: 0 10px 0 0
+            padding: 2px 5px
+            font-size: 0.8rem
+            width: 30px
+            text-align: center
+
+        button
+            margin: 0
+            width: auto
+            font-size: 0.8rem
+
+    .disable
+        opacity: 0.5
+        text-shadow: 0 0 8px #000
+        color: transparent
+
+        .currency
+            color: transparent
+
     .wish-title
         margin-bottom: 20px
 
