--- a/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
+++ b/getmestuff/resources/assets/sass/4-vendor/font-awesome/scss/_icons.scss
@@ -13,7 +13,7 @@
 // .#{$fa-css-prefix}-th-large:before { content: $fa-var-th-large; }
 // .#{$fa-css-prefix}-th:before { content: $fa-var-th; }
 // .#{$fa-css-prefix}-th-list:before { content: $fa-var-th-list; }
-// .#{$fa-css-prefix}-check:before { content: $fa-var-check; }
+.#{$fa-css-prefix}-check:before { content: $fa-var-check; }
 // .#{$fa-css-prefix}-remove:before,
 // .#{$fa-css-prefix}-close:before,
 // .#{$fa-css-prefix}-times:before { content: $fa-var-times; }
