--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -41,10 +41,8 @@
 
     .select
         margin-bottom: 20px
-        border-bottom: 1px solid $soft-grey
 
     .topup-button
-        border-top: 1px solid $soft-grey
         margin-top: 10px
         padding-top: 10px
 
@@ -140,11 +138,6 @@
 
     .disable
         opacity: 0.5
-        text-shadow: 0 0 8px #000
-        color: transparent
-
-        .currency
-            color: transparent
 
     .wish-title
         margin-bottom: 20px
@@ -160,6 +153,11 @@
 
         h2
             margin-bottom: 0px
+
+    .priority
+        margin-bottom: 20px
+        font-size: 0.9rem
+        color: $soft-grey
 
     .wish-user
         box-shadow: none
