--- a/getmestuff/resources/assets/sass/0-plugins/_base.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_base.sass
@@ -35,6 +35,10 @@ a
     font-family: $open-s
     font-size: 1rem
 
+a.disabled
+    pointer-events: none
+    opacity: 0.5
+
 a:active,
 a:hover
     outline: 0
