--- a/getmestuff/resources/assets/sass/1-modules/_wish.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_wish.sass
@@ -30,8 +30,14 @@
             font-size: 1.4rem
             font-family: $lato
 
-        p
-            font-size: 1rem
+        a
+            font-size: 0.9rem
+            color: $soft-grey
+            opacity: 0.7
+            transition: opacity 100ms
+
+            &:hover
+                opacity: 1
 
     .progress
         display: flex
