--- a/getmestuff/resources/assets/sass/1-modules/_notification.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_notification.sass
@@ -1,6 +1,7 @@
 .notification
     border: 1px solid $c-primary
     overflow: hidden
+    margin-bottom: 20px
 
     h3
         padding: 10px 0 10px 10px
@@ -19,6 +20,9 @@
             font-size: 1rem
             font-family: $open-s
             margin-bottom: 5px
+
+            i
+                font-size: 0.9rem
 
         p
             font-size: 0.9rem
