Notifications and Achievements
Latest Notifications Pop Up
Achievements Refactor

--- a/getmestuff/resources/assets/sass/1-modules/_notification.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_notification.sass
@@ -42,8 +42,11 @@
         .fa-exclamation-circle
             color: tomato
 
-    .empty
-        padding: 10px 0
+.empty
+    padding: 10px 0
 
-        p
-            font-size: 0.9rem
+    p
+        font-size: 0.9rem
+
+.empty.border
+    border: 1px solid $c-primary
