--- a/getmestuff/resources/assets/sass/1-modules/_user-info.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_user-info.sass
@@ -5,3 +5,10 @@
     
     p
         font-size: 0.9rem
+
+    .user-info-wrapper
+        p
+            margin-right: 5px
+
+        i
+            cursor: pointer
