--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -1,7 +1,7 @@
 .userpage
 
     nav
-        max-width: 400px
+        max-width: 300px
 
     footer
         position: relative
@@ -184,3 +184,6 @@
 
     .ref-count
         padding: 5px 20px
+
+    .empty
+        padding: 30px 0
