--- a/getmestuff/resources/assets/sass/1-modules/_alert.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_alert.sass
@@ -13,26 +13,32 @@
 
     strong
         margin-bottom: 5px
+        font-family: $open-s
+        font-weight: 600
 
     ul
         display: block
         margin-left: 20px
 
         li
-            list-style: disc
+            list-style: initial
             margin-bottom: 2px
+            font-family: $open-s
+            font-size: 0.9rem
 
     .close
         top: 5px
         right: 10px
         font-size: 1.2rem
         opacity: 0.5
+        font-family: $merw
+        font-weight: 700
 
         &:hover
             opacity: 1
 
 .alert.dismissible
-    min-width: 200px
+    padding-right: 35px
 
 .alert.success
     background-color: darken(#dff0d8, 5%)
