--- a/getmestuff/resources/assets/sass/0-plugins/_fonts.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_fonts.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700|Open+Sans')
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700|Open+Sans:400,600')
 
 $lato: 'Lato', sans-serif
 $merw: 'Merriweather', serif
