--- a/getmestuff/resources/assets/sass/1-modules/_wish.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_wish.sass
@@ -29,6 +29,7 @@
         h4
             font-size: 1.4rem
             font-family: $lato
+            font-weight: 400
 
         a
             font-size: 0.9rem
