--- a/getmestuff/resources/assets/sass/0-plugins/_fonts.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_fonts.sass
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700|Open+Sans:400,600')
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700|Open+Sans:400,600|Source+Sans+Pro:300')
 
 $lato: 'Lato', sans-serif
 $merw: 'Merriweather', serif
 $open-s: 'Open Sans', sans-serif
+$source-sans: 'Source Sans Pro', sans-serif
