--- a/getmestuff/resources/assets/sass/0-plugins/_basic.sass
+++ b/getmestuff/resources/assets/sass/0-plugins/_basic.sass
@@ -65,6 +65,9 @@ p
     align-self: flex-end
 
 // Basic Width Settings
+.w-auto
+    width: auto
+    
 .col-12
     max-width: 1036px
 
@@ -76,6 +79,9 @@ p
 
 .w8
     width: 80%
+
+.w68
+    width: 68%
 
 .w5
     width: 50%
