Visual and Pages
Added logo
Changed link designes
Added loader
Terms and Conditions
Privacy Page

--- a/getmestuff/resources/assets/sass/1-modules/_link.sass
+++ b/getmestuff/resources/assets/sass/1-modules/_link.sass
@@ -1,6 +1,7 @@
 .link
     color: $black
-    transition: all 100ms linear
+    transition: all 200ms linear
+    font-weight: 600
 
     &:hover
-        text-shadow: 0 0 5px transparentize($black, 0.5)
+        opacity: 0.5
