--- a/getmestuff/resources/assets/sass/2-pages/_index.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_index.sass
@@ -4,7 +4,7 @@
         border-color: $white
         color: $white
 
-        p
+        .footer-content
             color: $white
 
         .mobile
@@ -15,9 +15,6 @@
 
     .link
         color: $white
-
-        &:hover
-            text-shadow: 0 0 10px transparentize($white, 0.5)
 
     .social a
         color: $white
