--- a/getmestuff/resources/assets/sass/2-pages/_login.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_login.sass
@@ -63,6 +63,14 @@
         span, a
             font-family: $lato
 
+        a
+            margin-left: 5px
+            color: $black
+            opacity: 0.5
+
+            &:hover
+                opacity: 1
+
         input
             margin-right: 5px
 
@@ -107,7 +115,7 @@
             bottom: 100%
             left: 50%
             margin-left: -10px
-            margin-bottom: -9px
+            margin-bottom: -10px
 
         .pas-wrapper
             overflow: hidden
