--- a/getmestuff/resources/assets/sass/3-layouts/_footer.sass
+++ b/getmestuff/resources/assets/sass/3-layouts/_footer.sass
@@ -4,12 +4,17 @@ footer
     height: 70px
     background-color: $white
     border-top: 1px solid $black
-    // border-top: 1px solid transparentize($white, 0.4)
     z-index: 1
 
-    p
-        font-size: 0.9rem
+    .footer-content
+        font-size: 0.8rem
         color: $black
+
+        span
+            margin: 0 5px
+
+        p
+            font-size: inherit
 
         a
             font-size: inherit
