--- a/getmestuff/resources/assets/sass/3-layouts/_header.sass
+++ b/getmestuff/resources/assets/sass/3-layouts/_header.sass
@@ -6,6 +6,15 @@ header
     color: $black
     border-bottom: 1px solid $black
 
+    .logo
+        width: 100px
+        height: auto
+
+        svg
+            width: inherit
+            height: auto
+            fill: $white
+
     .mobile
         cursor: pointer
         display: none
@@ -48,4 +57,4 @@ nav
         color: $black
 
     a.active
-        color: #20b2aa
+        color: #0000ff
