--- a/getmestuff/resources/assets/sass/2-pages/_userpage.sass
+++ b/getmestuff/resources/assets/sass/2-pages/_userpage.sass
@@ -1,7 +1,10 @@
 .userpage
 
     nav
-        max-width: 500px
+        max-width: 600px
+
+        .link
+            font-size: 0.9rem
 
     footer
         position: relative
